src/test/ui/static/static-method-privacy.stderr
error[E0624]: associated function `new` is private
  --> $DIR/static-method-privacy.rs:9:19
   |
LL |     let _ = a::S::new();
   |                   ^^^ private associated function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0624`.
